criação da função carregarTreinos no script.js, correção na chamada da api/resumo, integracção back e front concluída.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,20 @@
             <div class="card" id="paceMedio">Pace Médio: 0</div>
         </div>
 
+        <table class="tabelaTreinos">
+            <thead class="tabela">
+              <tr>
+                <th>Data</th>
+                <th>Distância</th>
+                <th>Tempo</th>
+                <th>Calorias</th>
+                <th>Pace</th>
+              </tr>
+            </thead>
+            <tbody id="tabelaTreinos"></tbody>
+          </table>
+          
+
         <!--Graficos-->
         <div class="graficos">
             <canvas id="graficoDistancia"></canvas>
