--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,18 +19,20 @@
             <div class="card" id="paceMedio">Pace Médio: 0</div>
         </div>
 
-        <table class="tabelaTreinos">
-            <thead class="tabela">
-              <tr>
-                <th>Data</th>
-                <th>Distância</th>
-                <th>Tempo</th>
-                <th>Calorias</th>
-                <th>Pace</th>
-              </tr>
-            </thead>
-            <tbody id="tabelaTreinos"></tbody>
-          </table>
+        <div class="tabela-container">
+            <table class="tabela-treino">
+                <thead>
+                  <tr>
+                    <th>Data</th>
+                    <th>Distância</th>
+                    <th>Tempo</th>
+                    <th>Calorias</th>
+                    <th>Pace</th>
+                  </tr>
+                </thead>
+                <tbody id="tabelaTreinos"></tbody>
+              </table>
+        </div>
           
 
         <!--Graficos-->
